# phaios-core

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
benches/: kernels.rs
docs/: architecture.md  ffi.md
examples/: 01_luminance.rs  02_channel_mixer.rs  03_color_filter.rs  04_zone_system.rs  05_local_contrast.rs  06_srgb_encode.rs  README.md
examples/shared/: mod.rs
src/: bw.rs  encode.rs  error.rs  exposure.rs  lib.rs  local_contrast.rs  tone.rs
tests/: ffi.py  kernels.rs
